@@ -1,3 +1,3 @@
 muc
-Включить "шумный" режим: бот бутет приветствовать всех вхотящих и
-прощаться с выхотящими из конференции.
+Включить "шумный" режим: бот будет приветствовать всех входящих и
+прощаться с выходящими из конференции. [используется для отладки]
