@@ -1,4 +1,4 @@
 superadmin
-Разослать сообщение по всем конфам, гте ситит бот
+Разослать сообщение по всем конфам, где сидит бот
 пример:
  .globmsg всем привет от атмина
