@@ -1,4 +1,4 @@
 muc
-Написать сооющение в конфу
+Написать сообщение в конфу
 пример:
  .say привет всем
