@@ -1,0 +1,6 @@
+muc
+по этой команде можно посмотреть статус участника конференции
+синтаксис: .status [nick]
+примеры:
+ .status ????
+ .status
