@@ -75,3 +75,5 @@ join_success зашёл в конфу %s с ником %s
 join_slash в имени конфы и нике не толжно быть /
 join_already_there я уже там... если это не так, то попросите аdмина бота dать команту .rejoin
 globmsg_sent сообщение отправлено в %s конференций
+status_whom кого?
+
